# Marc_Speciale_STEP

./: 3d_diffsetup.odp  CCD.py  CMakeLists.txt  CTE_overvejelser.txt  README.md  aperturespots.xcf  ccd (Marc Sørensen's conflicted copy 2021-10-03).py  ccd.cpp  ccd.hpp  ccd.py  coordinates.txt  differentialtest.fit  difffluxfromtxt.txt  gitCommitAll.sh  libc_builder.py  main.py  mission_requirements.py  plots.py  pubplot.py  tasks.py  test.fits  utilities.py  zerobias.fits
FITS/: 2019-08-07T21-28-06_HD-185144_sigu.fits  2019-08-07T21-28-10_HD-185144_pugu.fits  2019-08-07T21-28-38_HD-185144_figu.fits
Opgave/: document.aux  document.tex  document.toc  main.aux  main.bbl  main.blg  main.tex  main.toc  refs.bib
Thesis/: main.aux  main.bbl  main.blg  main.listing  main.tex  main.toc  refs.bib
bias_sequence/: Capture_000.fit  Capture_001bias(10).fit  Capture_001bias(2).fit  Capture_001bias(3).fit  Capture_001bias(4).fit  Capture_001bias(5).fit  Capture_001bias(6).fit  Capture_001bias(7).fit  Capture_001bias(8).fit  Capture_001bias(9).fit  Capture_001bias.fit  Capture_002bias(10).fit  Capture_002bias(2).fit  Capture_002bias(3).fit  Capture_002bias(4).fit  Capture_002bias(5).fit  Capture_002bias(6).fit  Capture_002bias(7).fit  Capture_002bias(8).fit  Capture_002bias(9).fit  Capture_002bias.fit  Capture_003bias(10).fit  Capture_003bias(2).fit  Capture_003bias(3).fit  Capture_003bias(4).fit  Capture_003bias(5).fit  Capture_003bias(6).fit  Capture_003bias(7).fit  Capture_003bias(8).fit  Capture_003bias(9).fit  Capture_003bias.fit  Capture_004bias(10).fit  (+69 more)
(+199 files in other folders)
